--- a/requirements.txt
+++ b/requirements.txt
@@ -49,13 +49,12 @@ mote==0.0.4
 motephat==0.0.3
 mypy==0.812
 mypy-extensions==0.4.3
-noise==1.2.3
+noise==1.2.2
 numpy==1.19.5
 oauthlib==3.1.0
 packaging==23.1
 pantilthat==0.0.7
 parso==0.8.1
-perlin-noise==1.12
 pexpect==4.8.0
 pgzero==1.2
 phatbeat==0.1.1
@@ -125,3 +124,5 @@ v4l2-python3==0.3.1
 webencodings==0.5.1
 Werkzeug==1.0.1
 wrapt==1.12.1
+keyboard==0.13.5
+rpi_ws281x==5.0.0
